src/test/resources/frontend/fail/enumArray.skill
fail {
	E[] f;
}

enum E {
	a,b;
}